--- a/TLEGenerator.Program/TLEGenerator.Program.csproj
+++ b/TLEGenerator.Program/TLEGenerator.Program.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <Content Include="../config.json" CopyToOutputDirectory="Always" />
+    <Content Include="../satellites.json" CopyToOutputDirectory="Always" />
   </ItemGroup>
 
 </Project>
