--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,7 +53,7 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Publish
-      run: dotnet publish TLEGenerator -c Release --no-restore
+      run: dotnet publish TLEGenerator -c Release --no-restore --output osx-x64
     - uses: actions/upload-artifact@v3
       with:
         name: tlegenerator-osx-x64
