--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Publish
-      run: dotnet publish TLEGenerator -c Release -f net5.0* --no-restore --output linux-x64
+      run: dotnet publish TLEGenerator -c Release -f net5.0 --no-restore --output linux-x64
     - uses: actions/upload-artifact@v3
       with:
         name: tlegenerator-linux-x64
@@ -35,7 +35,7 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Publish
-      run: dotnet publish TLEGenerator -c Release -f net5.0* --no-restore --output windows-x64
+      run: dotnet publish TLEGenerator -c Release -f net5.0 --no-restore --output windows-x64
     - uses: actions/upload-artifact@v3
       with:
         name: tlegenerator-windows-x64
@@ -53,7 +53,7 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Publish
-      run: dotnet publish TLEGenerator -c Release -f net5.0* --no-restore --output osx-x64
+      run: dotnet publish TLEGenerator -c Release -f net5.0 --no-restore --output osx-x64
     - uses: actions/upload-artifact@v3
       with:
         name: tlegenerator-osx-x64
