--- a/TLEGenerator/TLEGenerator.csproj
+++ b/TLEGenerator/TLEGenerator.csproj
@@ -18,4 +18,9 @@
     <Content Include="../satellites.json" CopyToOutputDirectory="Always" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.2" />
+    <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
+  </ItemGroup>
+
 </Project>
